tests/errors/pop-empty.ja
procedure main()
    int x
    stack s
    pop(x, s)
